Fix: remove dark mode preference to load css correctly

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -183,24 +183,8 @@ section.recent-posts {
     margin-bottom: 15px;
 }
 
-.author-thumb {
-    width: 40px;
-    height: 40px;
-    margin-right: 13px;
-    border-radius: 100%;
-}
-
 .post-top-meta {
     margin-bottom: 2rem;
-}
-
-.post-top-meta .author-thumb {
-    width: 72px;
-    height: 72px;
-}
-
-.post-top-meta.authorpage .author-thumb {
-    margin-top: 40px;
 }
 
 .post-top-meta span {
@@ -209,22 +193,9 @@ section.recent-posts {
     display: inline-block;
 }
 
-.post-top-meta .author-description {
-    margin-bottom: 5px;
-    margin-top: 5px;
-    font-size: 0.95rem;
-}
-
 .toc ul {
     list-style: decimal;
     font-weight: 400;
-}
-
-.author-meta {
-    flex: 1 1 auto;
-    white-space: nowrap !important;
-    text-overflow: ellipsis !important;
-    overflow: hidden !important;
 }
 
 span.post-name,
@@ -728,6 +699,9 @@ h6 {
 
 img {
     max-width: 100%;
+    height: auto;
+    box-sizing: border-box;
+    display: inline-block; 
 }
 
 .bottompagination span.navigation {
